--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,4 +39,4 @@ stages:
       inputs:
        appName: $(WebAppName)
        azureSubscription: 'Resource Manager - Tailspin - Space Game'
-       imageName: $(RegistryName)/$(webRepository):$(build.buildId)
+       imageName: "$(RegistryName)/$(webRepository):$(build.buildId)"
