--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,8 @@ trigger:
 
 variables:
   buildConfiguration: 'Release'
+  webRepository: 'web'
+  tag: '$(Build.BuildId)'
 
 stages:
 - stage: 'Build'
@@ -39,4 +41,4 @@ stages:
       inputs:
        appName: $(WebAppName)
        azureSubscription: 'Resource Manager - Tailspin - Space Game'
-       imageName: '$(RegistryName)/$(webRepository)'
+       imageName: '$(RegistryName)/$(webRepository):$(Build.BuildId)'
